--- a/package.json
+++ b/package.json
@@ -12,16 +12,16 @@
         "name": "Marcos Sanz Latorre",
         "email": "marcossanzlatorre@gmail.com"
     },
-    "license": "Apache-2.0",
+    "license": "MIT",
     "main": "index",
     "repository": {
         "type": "git",
-        "url": "git://github.com/marsanla/ejs.git"
+        "url": "git://github.com/marsanla/smaki.git"
     },
     "bugs": {
-        "url": "https://github.com/marsanla/ejs/issues"
+        "url": "https://github.com/marsanla/smaki/issues"
     },
-    "homepage": "https://github.com/marsanla/ejs",
+    "homepage": "https://github.com/marsanla/smaki",
     "dependencies": {
         "jsonpack": "~1.1.4",
         "lodash": "*"
@@ -30,12 +30,6 @@
     },
     "engines": {
         "node": ">=0.10.0"
-    },
-    "scripts": {
-        "test": "mocha",
-        "coverage": "istanbul cover node_modules/mocha/bin/_mocha",
-        "doc": "rimraf out && jsdoc -c jsdoc.json lib/* docs/jsdoc/*",
-        "devdoc": "rimraf out && jsdoc -p -c jsdoc.json lib/* docs/jsdoc/*"
     },
     "maintainers": [
         {
